# swerve-module

./: .gitignore  CMakeLists.txt  Gamepad.cpp  Gamepad.h  README.md  main.cpp
SwerveModule/: CMakeLists.txt  SwerveKinematics.h  SwerveModule.cpp  SwerveModule.h
Vesc/: CMakeLists.txt  CanSocket.cpp  CanSocket.h  VescCan.cpp  VescCan.h  buffer.cpp  buffer.h  datatypes.h
